@startuml

interface UserDao{
+selectUserById():User
}

class User{
    -String name;
    -int sex;
    -String email;
    -String password;
}

class UserDaoImpl{
+selectUserById():User
}

class UserDaoLog{
+selectUserById():User
}

UserDao <-- UserDaoLog
Main --> UserDao
UserDao <|.. UserDaoImpl
UserDao <|.. UserDaoLog
UserDaoImpl *-- User

@enduml
